--- a/cluster/docker-compose.yml
+++ b/cluster/docker-compose.yml
@@ -1,18 +1,18 @@
 ---
-#version: '3.9'
+version: '2'
 services:
 
-  kafka1:
-    image: confluentinc/cp-kafka:${TAG}
-    hostname: kafka1
-    container_name: kafka1
+  broker:
+    image: confluentinc/cp-kafka:7.6.0
+    hostname: broker
+    container_name: broker
     ports:
-      - "9091:9091"
+      - "9092:9092"
       - "9101:9101"
     environment:
-      KAFKA_BROKER_ID: 1
+      KAFKA_NODE_ID: 1
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
-      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka1:29091,PLAINTEXT_HOST://localhost:9091'
+      KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092'
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
@@ -20,84 +20,42 @@ services:
       KAFKA_JMX_PORT: 9101
       KAFKA_JMX_HOSTNAME: localhost
       KAFKA_PROCESS_ROLES: 'broker,controller'
-      KAFKA_NODE_ID: 1
-      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka1:19091,2@kafka2:19092,3@kafka3:19093'
-      KAFKA_LISTENERS: 'PLAINTEXT://kafka1:29091,CONTROLLER://kafka1:19091,PLAINTEXT_HOST://0.0.0.0:9091'
+      KAFKA_CONTROLLER_QUORUM_VOTERS: '1@broker:29093'
+      KAFKA_LISTENERS: 'PLAINTEXT://broker:29092,CONTROLLER://broker:29093,PLAINTEXT_HOST://0.0.0.0:9092'
       KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
       KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
       KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
-    volumes:
-      - ./update_run.sh:/tmp/update_run.sh
-    command: "bash -c 'if [ ! -f /tmp/update_run.sh ]; then echo \"ERROR: Did you forget the update_run.sh file that came with this docker-compose.yml file?\" && exit 1 ; else /tmp/update_run.sh && /etc/confluent/docker/run ; fi'"
+      # Replace CLUSTER_ID with a unique base64 UUID using "bin/kafka-storage.sh random-uuid" 
+      # See https://docs.confluent.io/kafka/operations-tools/kafka-tools.html#kafka-storage-sh
+      CLUSTER_ID: 'MkU3OEVBNTcwNTJENDM2Qk'
 
-  kafka2:
-      image: confluentinc/cp-kafka:${TAG}
-      hostname: kafka2
-      container_name: kafka2
-      ports:
-        - "9092:9092"
-        - "9102:9102"
-      environment:
-        KAFKA_BROKER_ID: 2
-        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
-        KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka2:29092,PLAINTEXT_HOST://localhost:9092'
-        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-        KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-        KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-        KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-        KAFKA_JMX_PORT: 9102
-        KAFKA_JMX_HOSTNAME: localhost
-        KAFKA_PROCESS_ROLES: 'broker,controller'
-        KAFKA_NODE_ID: 2
-        KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka1:19091,2@kafka2:19092,3@kafka3:19093'
-        KAFKA_LISTENERS: 'PLAINTEXT://kafka2:29092,CONTROLLER://kafka2:19092,PLAINTEXT_HOST://0.0.0.0:9092'
-        KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
-        KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
-        KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
-      volumes:
-        - ./update_run.sh:/tmp/update_run.sh
-      command: "bash -c 'if [ ! -f /tmp/update_run.sh ]; then echo \"ERROR: Did you forget the update_run.sh file that came with this docker-compose.yml file?\" && exit 1 ; else /tmp/update_run.sh && /etc/confluent/docker/run ; fi'"
-
-  kafka3:
-      image: confluentinc/cp-kafka:${TAG}
-      hostname: kafka3
-      container_name: kafka3
-      ports:
-        - "9093:9093"
-        - "9103:9103"
-      environment:
-        KAFKA_BROKER_ID: 3
-        KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: 'CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT'
-        KAFKA_ADVERTISED_LISTENERS: 'PLAINTEXT://kafka3:29093,PLAINTEXT_HOST://localhost:9093'
-        KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-        KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
-        KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
-        KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-        KAFKA_JMX_PORT: 9103
-        KAFKA_JMX_HOSTNAME: localhost
-        KAFKA_PROCESS_ROLES: 'broker,controller'
-        KAFKA_NODE_ID: 3
-        KAFKA_CONTROLLER_QUORUM_VOTERS: '1@kafka1:19091,2@kafka2:19092,3@kafka3:19093'
-        KAFKA_LISTENERS: 'PLAINTEXT://kafka3:29093,CONTROLLER://kafka3:19093,PLAINTEXT_HOST://0.0.0.0:9093'
-        KAFKA_INTER_BROKER_LISTENER_NAME: 'PLAINTEXT'
-        KAFKA_CONTROLLER_LISTENER_NAMES: 'CONTROLLER'
-        KAFKA_LOG_DIRS: '/tmp/kraft-combined-logs'
-      volumes:
-        - ./update_run.sh:/tmp/update_run.sh
-      command: "bash -c 'if [ ! -f /tmp/update_run.sh ]; then echo \"ERROR: Did you forget the update_run.sh file that came with this docker-compose.yml file?\" && exit 1 ; else /tmp/update_run.sh && /etc/confluent/docker/run ; fi'"
+  schema-registry:
+    image: confluentinc/cp-schema-registry:7.6.0
+    hostname: schema-registry
+    container_name: schema-registry
+    depends_on:
+      - broker
+    ports:
+      - "8081:8081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'broker:29092'
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
 
   control-center:
-    image: confluentinc/cp-enterprise-control-center:${TAG}
+    image: confluentinc/cp-enterprise-control-center:7.6.0
     hostname: control-center
     container_name: control-center
     depends_on:
-      - kafka1
-      - kafka2
-      - kafka3
+      - broker
+      - schema-registry
     ports:
       - "9021:9021"
     environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka1:29091,kafka2:29092,kafka3:29093'
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
+      CONTROL_CENTER_CONNECT_CONNECT-DEFAULT_CLUSTER: 'connect:8083'
+      CONTROL_CENTER_CONNECT_HEALTHCHECK_ENDPOINT: '/connectors'
+      CONTROL_CENTER_SCHEMA_REGISTRY_URL: "http://schema-registry:8081"
       CONTROL_CENTER_REPLICATION_FACTOR: 1
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
