--- a/clients/producer-transactional.properties
+++ b/clients/producer-transactional.properties
@@ -1,4 +1,4 @@
-client.id=TransactionalProducer"
+client.id=TransactionalProducer
 bootstrap.servers=localhost:9092
 transactional.id=prod-1
 topic=topic-1
