--- a/cluster/docker-compose.yml
+++ b/cluster/docker-compose.yml
@@ -440,6 +440,8 @@ services:
       - broker
     ports:
       - "8081:8081"
+    networks:
+      - app_net
     environment:
       SCHEMA_REGISTRY_HOST_NAME: schema-registry
       SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: 'broker:29092'
