Added Mariadb service. Need to fix MariaDB ingestion

--- a/cluster/.env
+++ b/cluster/.env
@@ -3,3 +3,5 @@ OPENMETADATA_TAG=1.1.5
 MARIADB_ROOT_PASSWORD=mariadb
 MARIADB_CONNECT_USER=connect
 MARIADB_CONNECT_PASSWORD=connect
+MARIADB_OPENMETADATA_USER=openmetadata
+MARIADB_OPENMETADATA_PASSWORD=openmetadata
