--- a/cluster/compose.yml
+++ b/cluster/compose.yml
@@ -380,7 +380,9 @@ services:
       postgresql:
         condition: service_healthy
       openmetadata-server:
-        condition: service_started
+        condition: service_healthy
+      mariadb:
+        condition: service_healthy
     environment:
       AIRFLOW__API__AUTH_BACKENDS: "airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session"
       AIRFLOW__CORE__EXECUTOR: LocalExecutor
@@ -404,6 +406,8 @@ services:
       - ingestion-volume-dag-airflow:/opt/airflow/dag_generated_configs
       - ingestion-volume-dags:/opt/airflow/dags
       - ingestion-volume-tmp:/tmp
+    healthcheck:
+      test: wget --no-verbose --tries=1 --output-document=/dev/null http://0.0.0.0:8080/ || exit 1
 
   broker:
     image: confluentinc/cp-kafka:${CP_TAG}
@@ -485,10 +489,12 @@ services:
         condition: service_healthy
       execute-migrate-all:
         condition: service_completed_successfully
+      init_mariadb:
+        condition: service_completed_successfully
       mariadb:
-        condition: service_started
+        condition: service_healthy
       ingestion:
-        condition: service_started
+        condition: service_healthy
     networks:
       - app_net
     deploy: 
@@ -547,6 +553,11 @@ services:
       - app_net
     environment:
       MARIADB_ROOT_PASSWORD: ${MARIADB_ROOT_PASSWORD} # username: root, password see .env file
+    healthcheck:
+      test: ["CMD-SHELL", "exit | mariadb -h localhost -P 3306 -u root -p$$MARIADB_ROOT_PASSWORD" ]
+      interval: 5s
+      timeout: 20s
+      retries: 30
 
   adminer:
     image: adminer
@@ -564,7 +575,7 @@ services:
     container_name: init_mariadb
     depends_on:
       mariadb:
-        condition: service_started
+        condition: service_healthy
     networks:
       - app_net
     deploy: 
